<resources>
    <string name="app_name">Flood MApp</string>
    <string name="action_settings">Settings</string>
    <string name="signin_header">Header</string>
    <string name="text_lorem_ipsum">Lorem Ipsum</string>
    <string name="text_login">Log In</string>
    <string name="text_register">Sign up</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_home">Home</string>
    <string name="text_juan">Juan Dela Cruz</string>
    <string name="text_ok">OK</string>
    <string name="network_failure">No internet connection. Check your network settings and try again.</string>
    <string name="network_failure_access_feature">Internet connection is required to access this feature.</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="internal_server_error">Internal server error. Please try again later.</string>
    <string name="register_successful">Your account was successfully registered! You can now Sign In!</string>
    <string name="location_access">Location permission must be granted to use this app\'s features. Would you like to try again?</string>
    <string name="are_you_sure_signout">Are you sure you want to Sign Out?</string>
    <string name="base_url">Sign up!</string>
    <string name="google_oauth">"423938285702-jam7586bljpdm5aemdp6dndn3d9hta6u.apps.googleusercontent.com"</string>
    <string name="weather_forecast_url">https://fea-app.herokuapp.com/weathers</string>
    <string name="about_url">https://fea-app.herokuapp.com/about-us</string>
    <string name="terms_conditions_url">https://fea-app.herokuapp.com/terms-and-conditions</string>
    <string name="privacy_policy_url">https://fea-app.herokuapp.com/privacy-policy</string>
    <string name="text_evacuation_sites">Evacuation Sites</string>
    <string name="click_evacuation_sites">Click here to all evacuation sites</string>
    <string name="text_weather_forecast">Weather Forecast</string>
    <string name="click_weather_forecast">Click here for weather updates</string>
    <string name="text_no_account">Don\'t have an account?</string>
    <string name="text_signup">Sign up!</string>
    <string name="text_agreement">By proceeding you agree to Flood MApp\'s \n Terms and Conditions and acknowledge you \n have read the Privacy Policy. </string>
    <string name="text_signin_with_google">Sign in with google</string>
    <string name="text_signup_with_google">Sign up with google</string>
    <string name="text_safety_precautions">Safety Precautions</string>
    <string name="text_safety_emergency_numbers">Emergency Numbers</string>
    <string name="text_flood_preparedness">Flood Preparedness</string>
    <string name="text_flood_preparedness_guidelines">Guidelines</string>
    <string name="text_pagasa_updates">PAGASA Updates</string>
    <string name="text_profile">Profile</string>
    <string name="text_cancel_edit_profile">Cancel Edit</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_settings">Settings</string>
    <string name="text_save">Save</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="text_emergency_numbers">Emergency Numbers</string>
    <string name="text_hotlines">Hotlines</string>
    <string name="text_emergency_dial">Emergency Dial</string>
    <string name="text_pnp">PNP - Philippine National Police</string>
    <string name="text_rescue">Rescue 1024 - Calumpit</string>
    <string name="text_bfp">BFP - Bureau of Fire Protection</string>
    <string name="text_911">• 911</string>
    <string name="text_0933">• 0933–197–8736</string>
    <string name="text_044_815">• (044)–815–2982</string>
    <string name="text_0923">• 0923–401–4305</string>
    <string name="text_044_913">• (044)–913–7295</string>
    <string name="text_0916">• 0916–390–3931</string>
    <string name="text_0925">• 0925–522–5237</string>
    <string name="text_044_9137">• (044)–913–7289</string>
    <string name="text_044_3205">• (044)–320–5605</string>
    <string name="text_044_3200">• (044)–320–0305</string>
    <string name="text_0916_390">• 0916–390–3931</string>
    <string name="text_0925_522">• 0925–522–5237</string>
    <string name="text_044_390">• (044)–913–7289</string>
    <string name="text_flood_prep_guide">Flood Preparation Guidelines</string>
    <string name="text_general">General</string>
    <string name="text_particular">Particular</string>
    <string name="text_general_gl">General Guidelines</string>
    <string name="text_particular_gl">Particular Guidelines</string>
    <string name="text_warning_system">Community Early Warning System</string>
    <string name="text_flood_susceptibility_veryhigh">Very high flood susceptibility</string>
    <string name="text_flood_susceptibility_high">High flood susceptibility</string>
    <string name="text_flood_susceptibility_moderate">Moderate flood susceptibility</string>
    <string name="text_flood_susceptibility_low">Low flood susceptibility</string>
    <string name="text_flood_title_basic_steps">Basic Steps to prepare \n for the storm</string>
    <string name="text_flood_title_step_2">IF YOUR AREA IS UNDER A FLOOD \n WATCH OR WARNING</string>
    <string name="text_flood_title_step_3">EMERGENCY SUPPLIES YOU \n WILL NEED</string>
    <string name="text_flood_title_step_4">PREPARING TO \n EVACUATE</string>
    <string name="text_flood_title_step_5">IF YOU ARE ORDERED \n TO EVACUATE</string>
    <string name="text_flood_title_step_6">IF YOU ARE ORDERED NOT \n TO EVACUATE</string>
    <string name="text_very_high_flood">
        Areas likely to experience flood heights of greater than 2 meters and/or flood duration of more than 3 days. These areas are immediately flooded during heavy rains of several hours; include landforms of topographic lows such as active river channels, abandoned river channels and areas along river banks; also prone to flash floods.
    </string>
    <string name="text_moderate_high_flood">
        Areas likely to experience flood heights of greater than 0.5m up to 1 meter and/or flood duration of 1 to 3 days. These areas are subject to widespread inundation during prolonged and extensive heavy rainfall or extreme weather conditions. Fluvial terraces, alluvial fans, and infilled valleys are areas moderately subjected to flooding.
    </string>
    <string name="text_high_flood">
       Areas likely to experience flood heights of greater than 1 up to 2 meters and/or flood duration of more than 3 days. These areas are immediately flooded during heavy rains of several hours; include landforms of topographic lows such as active river channels, abandoned river channels and areas along river banks; also prone to flash floods.
    </string>
    <string name="text_low_flood">
       Areas likely to experience flood heights of 0.5 meter or less and/or flood duration of less than 1 day. These areas include low hills and gentle slopes. They also have sparse to moderate drainage density.
    </string>
    <string name="text_basic_steps">
        • Learn about your community\'s emergency plans, warning signals, evacuation routes, and locations of emergency shelters. \n \n
        • Plan and practice a flood evacuation route with your family. Ask an out-of-state relative or friend to be the "family contact" in case your family is separated during a flood. Make sure everyone in your family knows the name, address, and phone number of this contact person. \n \n
        • Post emergency phone numbers on every phone. \n \n
        • Inform local authorities about any special needs, i.e., elderly or bedridden people, or anyone with a disability. \n \n
        • Identify potential home hazards and know how to secure or protect them before the flood strikes. Be prepared to turn off electrical power when there is standing water, fallen power lines, or before you evacuate. Turn off gas and water supplies before you evacuate. Secure structurally unstable building materials. \n \n
    </string>
    <string name="text_step_2">
        • Gather the emergency supplies you previously stocked in your home and stay tuned to local radio or television stations for updates. \n \n
        • Turn off all utilities at the main power switch and close the main gas valve if evacuation appears necessary. \n \n
        • Have your immunization records handy or be aware of your last tetanus shot, in case you should receive a puncture wound or a wound becomes contaminated during or after the flood. \n \n
        • Bring outdoor possessions, such as lawn furniture, grills and trash cans inside or tie them down securely \n \n
    </string>
    <string name="text_step_3">
        You should stock your home with supplies that may be needed during the emergency period. At a minimum, these supplies should include: \n \n
            • Several clean containers for water, large enough for a 3–5-day supply of water (about five gallons for each person). \n \n
            • A 3–5-day supply of non-perishable food and a non-electric can opener. \n \n
            • A first aid kit and manual and prescription medicines and special medical needs. \n \n
            • A battery-powered radio, flashlights, and extra batteries. \n \n
            • Sleeping bags or extra blankets. \n \n
            • Water-purifying supplies, such as chlorine or iodine tablets or unscented, ordinary household chlorine bleach. \n \n
            • Baby food and/or prepared formula, diapers, and other baby supplies. \n \n
            • Disposable cleaning cloths, such as "baby wipes" for the whole family to use in case bathing facilities are not available. \n \n
            • Personal hygiene supplies, such as soap, toothpaste, sanitary napkins, etc. \n \n
            • An emergency kit for your car with food, flares, booster cables, maps, tools, a first aid kit, fire extinguisher, sleeping bags, etc. \n \n
            • Rubber boots, sturdy shoes, and waterproof gloves. \n \n
    </string>
    <string name="text_step_4">
        • Expect the need to evacuate and prepare for it. When a flood watch is issued, you should: \n \n
        • Fill your vehicle’s gas tank and make sure the emergency kit for your car is ready. \n \n
        • If no vehicle is available, make arrangements with friends or family for transportation. \n \n
        • Identify essential documents such as medical records, insurance cards along with ID cards and put in waterproof material to carry with you during evacuation. \n \n
        • Fill your clean water containers. \n \n
        • Review your emergency plans and supplies, checking to see if any items are missing. \n \n
        • Tune in the radio or television for weather updates. \n \n
        • Listen for disaster sirens and warning signals. \n \n
        • Put livestock and family pets in a safe area. Due to food and sanitation requirements, emergency shelters cannot accept animals. \n \n
        • Adjust the thermostat on refrigerators and freezers to the coldest possible temperature. \n \n
    </string>
    <string name="text_step_5">
        You should never ignore an evacuation order. Authorities will direct you to leave if you are in a low-lying area, or within the greatest potential path of the rising waters. If a flood warning is issued for your area or you are directed by authorities to evacuate the area: \n \n
            • Take only essential items with you. \n \n
            • If you have time, turn off the gas, electricity, and water. \n \n
            • Disconnect appliances to prevent electrical shock when power is restored. \n \n
            • Follow the designated evacuation routes and expect heavy traffic. \n \n
            • Do not attempt to drive or walk across creeks or flooded roads. \n \n
    </string>
</resources>