<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/signin_header"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_login_signup_high_res" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/imageView"
                >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/text_login"
                    android:textSize="45sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/text_email"
                        android:layout_marginStart="3dp"
                        android:fontFamily="@font/montserrat_regular"
                        />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mtf_signin_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColorHighlight="@color/design_default_color_error"
                        android:textColorHint="@color/black"
                        android:textSize="18sp"
                        android:inputType="textEmailAddress"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/text_password"
                        android:layout_marginStart="3dp"
                        android:fontFamily="@font/montserrat_regular"
                        />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mtf_signin_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColorHighlight="@color/design_default_color_error"
                        android:textColorHint="@color/black"
                        android:textSize="18sp"
                        android:inputType="textPassword"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    >

                    <TextView
                        android:id="@+id/tv_signin_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/text_forgot_password"
                        android:layout_marginStart="3dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:id="@+id/tv_signin_login"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:text="@string/text_login"
                        android:textAlignment="center"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textAllCaps="true"
                        android:background="@drawable/bg_rounded_signin_blue"
                        />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/text_no_account"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tv_signin_signup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/text_signup"
                            android:textColor="@color/signin_button_blue"
                            android:textSize="15sp" />
                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>