<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/signin_header"
            android:scaleType="fitXY"
            android:src="@drawable/bg_login_signup_high_res"
            android:layout_weight=".35"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical"
            android:layout_weight=".65"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/app_name"
                android:textSize="35sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="Already have an account?"
                    android:textSize="15sp" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sb_signinup_login"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:visibility="gone"
                    />

                <RelativeLayout
                    android:id="@+id/rlt_signinup_login"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/bg_rounded_signin_blue"
                    android:visibility="visible"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/google_white_logo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/text_signin_with_google"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_rounded_signin_blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="Don't have an account yet?"
                    android:textSize="15sp" />

                <RelativeLayout
                    android:id="@+id/rlt_signinup_register"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/bg_rounded_signin_blue">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/google_white_logo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/text_signup_with_google"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/text_agreement"
                android:textAlignment="center"
                android:textSize="12sp"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>